fixed footer spacing

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -3,7 +3,7 @@ footer {
   padding: 3rem 0;
   text-align: center;
   font-size: 0.9rem;
-  margin-top: 20rem;
+  margin-top: 30rem;
   border-top: solid 3px white;
 }
 
